[package]
name = "arproxy-macfilter-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
http-body-util = "0.1.1"
mime = "0.3.17"
pnet = "0.34.0"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.199", features = [ "derive" ] }
serde_json = "1.0.116"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = [ "full" ] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
validator = { version = "0.18.1", features = [ "derive" ] }

[dev-dependencies]
serial_test = "3.1.1"
tracing-test = "0.2.4"
tower = "0.4.13"